<resources>
    <string name="app_name">Survey Tool</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_default_username">test</string>
    <string name="pref_title_username">Survey app username</string>
    <string name="pref_default_password">123456</string>
    <string name="pref_title_password">Survey app password</string>
    <string name="pref_key_user_password">user_password</string>
    <string name="survey_tool">Survey Tool</string>
    <string name="pref_key_user_username">user_username</string>
    <string name="title_form_list">Forms</string>
    <string name="title_form_detail">Form Detail</string>
    <string name="title_forminstance_list">FormInstances</string>
    <string name="title_forminstance_detail">FormInstance Detail</string>
    <string name="title_activity_form_instance">Form Data</string>
    <string name="title_activity_form_edit">FormEditActivity</string>
    <string name="title_activity_form_view">FormViewActivity</string>
    <string name="authority">tz.co.nezatech.apps.surveytool.sync</string>
    <string name="account_type">nezatech.co.tz</string>
    <string name="pref_key_sync_frequency">sync_frequency</string>
    <string name="list_filter_hint">Enter your search text here</string>
    <string name="title_activity_summary">My Survey Summary</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="drawer_title_communicate">Communicate</string>
    <string name="drawer_title_summary">Survey Summary</string>
    <string name="nav_add_dummy_records">Add Dummy Forms</string>
    <string name="summary_filter_hint">Enter date to filter (yyyy-MM-dd)</string>
    <string name="nav_remove_dummy_records">Remove Dummy Records</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="nav_gps_check">GPS Check</string>
    <string name="title_activity_ocr">OCRActivity</string>
    <string name="ocr_instruction">Start OCR and capture texts!</string>
    <string name="ocrBtnCopyClcBrd">Copy to clickboard</string>
    <string name="ocrBtnCaptureText">Capture Text</string>
    <string name="nav_ocr_capture">OCR Capture</string>
    <string name="gps_network_not_enabled">GPS is not enabled. Open location settings to enbale before you proceed as GPS is required on this survey</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="cancel">Cancel</string>
    <string name="form_regex_setup_template">^Setup\\.(\\w+)$</string>
    <string name="form_regex_select_template">^Select\\[([ a-zA-Z0-9,]+)]$</string>
    <string name="form_inputlabel_jsonpath">$.groups[?(@.name == \'%s\')].inputs[?(@.name == \'%s\')].label</string>
    <string name="form_grouplabel_jsonpath">$.groups[?(@.name == \'%s\')].label</string>
    <string name="form_input_error_notvalid_inputorgroup">Error: not valid input or group</string>
    <string name="txn_sample_text1">Text1</string>
    <string name="form_input_checkother_enter_details_here">Enter details here</string>
    <string name="txt_search_instances">Search</string>
    <string name="label_sample_title">Sample Title</string>
    <string name="label_sample_description">Description</string>
    <string name="constTextOthersSpecify">OthersSpecify</string>
    <string name="formCheckBoxOtherSpecifyNewLabel">Specify others</string>
    <string name="formRadioGroupOtherSpecifyNewLabel">Specify others</string>
    <string name="txt_sync_local_forms">Sync local forms</string>
</resources>
