<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_settings"
            android:icon="@mipmap/nav_settings"
            android:title="@string/drawer_title_settings" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/drawer_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_summary"
                android:icon="@mipmap/nav_summary"
                android:title="@string/drawer_title_summary" />
            <item
                android:id="@+id/nav_dummy_records"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_add_dummy_records" />
            <item
                android:id="@+id/nav_dummy_records_remove"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_remove_dummy_records" />
            <item
                android:id="@+id/nav_gps_check"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_gps_check" />
        </menu>
    </item>

</menu>
